Fix VirtualizationClassLoader to correctly create class path URLs on Windows